--- a/configuration/template.yaml
+++ b/configuration/template.yaml
@@ -7,7 +7,7 @@
         {% set dlna_src = state_attr('media_player.pioneer_dlna', 'media_content_id') %}
         {% if (src == "Network" and dlna_src == "spotify://") %}  {{ "Spotify" }}
         {% elif (src == "Network" and dlna_src == "airplay://") %}  {{ "Airplay" }}
-        {% elif (src == "Network" and dlna_src == "http://stream-uk1.radioparadise.com/aac-320") %}  {{ "Radio Paradise" }}
+        {% elif (src == "Network" and dlna_src is not none and 'radioparadise' in dlna_src ) %}  {{ "Radio Paradise TODO YAML" }}
         {% elif (src == "Network") %}  {{ dlna_src }}
         {% elif (src == "Google TV"  and state_attr('media_player.chromecast_pioneer', 'app_name') is not none) %}
           {{ state_attr('media_player.chromecast_pioneer', 'app_name') }}
@@ -45,18 +45,28 @@
         {% endif %}
     - name: "Volume Pioneer"
       unit_of_measurement: "dB"
+      device_class: "sound_pressure"
       unique_id: "volume_pioneer"
       icon: "mdi:volume-high"
       state: >
-        {% set vol_float = state_attr('media_player.pioneer_onkyo', 'volume_level') | float(0) %}
-        {{ vol_float * 100 - 82 }}
+        {%- from 'templates.jinja' import volume_to_db -%}
+        {{ volume_to_db(state_attr('media_player.pioneer_onkyo', 'volume_level')) }}
     - name: "Volume Bathroom"
       unit_of_measurement: "dB"
+      device_class: "sound_pressure"
       unique_id: "volume_pioneer_zone_2"
       icon: "mdi:volume-high"
       state: >
-        {% set vol_float = state_attr('media_player.pioneer_onkyo_zone_2', 'volume_level') | float(0) %}
-        {{ vol_float * 100 - 82 }}
+        {%- from 'templates.jinja' import volume_to_db -%}
+        {{ volume_to_db(state_attr('media_player.pioneer_onkyo_zone_2)', 'volume_level')) }}
+    - name: "Volume Bedroom"
+      unit_of_measurement: "dB"
+      device_class: "sound_pressure"
+      unique_id: "volume_pioneer_zone_3"
+      icon: "mdi:volume-high"
+      state: >
+        {%- from 'templates.jinja' import volume_to_db -%}
+        {{ volume_to_db(state_attr('media_player.pioneer_onkyo_zone_3', 'volume_level')) }}
     - name: "Listening mode"
       state: >
         {% set attr = state_attr('media_player.pioneer_onkyo', 'audio_information') %}
