--- a/dashboards/view_home_mobile.yaml
+++ b/dashboards/view_home_mobile.yaml
@@ -1,6 +1,11 @@
+type: sections
+max_columns: 1
 title: Home
 path: home-mobile
 icon: "mdi:view-compact"
+header:
+  layout: center
+  badges_wrap: scroll
 badges:
 - type: entity
   entity: weather.forecast_home
@@ -31,13 +36,15 @@ badges:
   entity: sensor.bus_home_metro
   name: Bus
   display_type: complete
-cards:
-  - type: markdown
-    content: |-
-      <center>
-
-      <font size=5>{{ states('sensor.date') }}
-      <font size=2>
+sections:
+  - type: grid
+    cards:
+      - type: markdown
+        content: |-
+          <center>
     
-      <font size=7><b>{{ states('sensor.time') }}
-  - !include "card_hstack_scenes.yaml"
+          <div class="home-mobile-date-time">
+          <font size=5>{{ states('sensor.date') }}</font><br>
+          <font size=7><b>{{ states('sensor.time') }}</font>
+          </div>
+      - !include "card_hstack_scenes.yaml"
