--- a/dashboards/card_hstack_scenes.yaml
+++ b/dashboards/card_hstack_scenes.yaml
@@ -31,20 +31,6 @@ cards:
       type: button
       tap_action:
         action: toggle
-      entity: scene.lights_on
-    - show_name: false
-      show_icon: true
-      type: button
-      tap_action:
-        action: toggle
-      entity: scene.lights_focus
-  - type: vertical-stack
-    cards:
-    - show_name: false
-      show_icon: true
-      type: button
-      tap_action:
-        action: toggle
       entity: scene.lights_cooking
     - show_name: false
       show_icon: true
@@ -66,22 +52,11 @@ cards:
       tap_action:
         action: toggle
       entity: scene.lights_off
-  - type: conditional
-    conditions:
-    - condition: screen
-      media_query: "(min-width: 768px)"
-    card:
-      type: vertical-stack
-      cards:
-      - show_name: false
-        show_icon: true
-        type: button
-        tap_action:
-          action: toggle
-        entity: input_boolean.lights_dim
-      - show_name: false
-        show_icon: true
-        type: button
-        tap_action:
-          action: toggle
-        entity: input_boolean.lights_motion
+  - type: button
+    show_icon: true
+    show_name: false
+    show_state: false
+    icon: mdi:arrow-bottom-right-bold-box
+    tap_action:
+      action: navigate
+      navigation_path: lights-scenes
