Update NET radio stations

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -71,6 +71,11 @@ input_select:
       - "Projector"
       - "Radio FM"
       - "Network"
+  media_radio_net:
+    name: Radio NET
+    options: # Populate options dynamically on startup from `entities/media_radio_net_stations.yaml`
+      - "Initializing..."
+    icon: "mdi:music-box"
 #  pc_power_mode:
 #    name: "PC power mode"
 #    options:
