--- a/configuration/media_player.yaml
+++ b/configuration/media_player.yaml
@@ -3,7 +3,7 @@
   unique_id: pioneer_universal
   children:
     - media_player.pioneer_onkyo
-    - media_player.pioneer_dlna
+    - media_player.pioneer_dlna # may need to rename from pioneer_kamil
   # - media_player.spotify
   active_child_template: >
     {% if is_state_attr('media_player.pioneer_onkyo', 'source', 'Network') and states('media_player.pioneer_dlna') != 'unavailable' %}
