--- a/dashboards/skynet_mobile.yaml
+++ b/dashboards/skynet_mobile.yaml
@@ -2,6 +2,7 @@ title: Skynet Mobile
 views:
   - !include "view_home_mobile.yaml"
   - !include "view_lights_mobile.yaml"
+  - !include "view_lights_scenes.yaml"
   - !include "view_lights_living_room.yaml"
   - !include "view_lights_bathroom.yaml"
   - !include "view_lights_bedroom.yaml"
